charts/monitoring-logging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - secretName: monitoring-tls-secret
      hosts:
        - grafana.ow.lab.dimpact.nl
        - prometheus.ow.lab.dimpact.nl
  rules:
    - host: prometheus.ow.lab.dimpact.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podiumd-prometheus-server
                port:
                  name: http
    - host: grafana.ow.lab.dimpact.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podiumd-grafana
                port:
                  name: service
